[components] Fix pane header's z-index

--- a/packages/@sanity/components/src/panes/styles/DefaultPane.css
+++ b/packages/@sanity/components/src/panes/styles/DefaultPane.css
@@ -64,7 +64,7 @@
   top: 0;
   user-select: none;
   background-color: inherit;
-  z-index: 1;
+  z-index: var(--zindex-pane);
 
   @nest .isCollapsed & {
     background-color: transparent;
